--- a/wercker.yml
+++ b/wercker.yml
@@ -5,6 +5,7 @@ build:
             name: Get data
             code: |
               git clone https://github.com/spacexlaunches/launches-data.git data
+              cp -r data/patches _site/patches
         - script:
             name: SASS
             code: |
