--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "jquery": "^3.1.1",
     "jsdom": "^9.10.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^4.6.1",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.3.0"
+  },
   "scripts": {
     "serve": "cd _site && python -m SimpleHTTPServer 4000",
     "build:css": "sass --style compressed style.scss _site/style.css",
