--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "generate.js",
   "dependencies": {
     "jquery": "^3.1.1",
-    "jsdom": "^9.10.0"
+    "jsdom": "^9.10.0",
+    "node-sass": "^4.5.3"
   },
   "devDependencies": {
     "eslint": "^4.6.1",
@@ -15,7 +16,7 @@
   },
   "scripts": {
     "serve": "cd _site && python -m SimpleHTTPServer 4000",
-    "build:css": "sass --style compressed style.scss _site/style.css",
+    "build:css": "node-sass --output-style compressed style.scss _site/style.css",
     "build:js": "node generate.js",
     "build": "npm run build:css && npm run build:js"
   },
