--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,21 @@
-_site/style.css
-_site/index.html
-_site/style.css.map
-_site/next.json
-_site/patches
-node_modules
-.sass-cache/
-data/
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
