--- a/package.json
+++ b/package.json
@@ -1,27 +1,35 @@
 {
   "name": "spacexlaunches.com",
   "description": "Previous SpaceX launches and next mission",
-  "main": "generate.js",
   "dependencies": {
-    "jquery": "^3.1.1",
-    "jsdom": "^9.10.0",
-    "node-sass": "^4.5.3"
+    "axios": "^0.18.0",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^4.0.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-ga": "^2.4.1",
+    "react-scripts": "1.1.1",
+    "styled-components": "^3.1.6"
   },
   "devDependencies": {
-    "eslint": "^4.6.1",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.3.0"
+    "babel-eslint": "^8.2.2",
+    "eslint": "^4.18.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-flowtype": "^2.46.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "stylelint": "^9.1.1",
+    "stylelint-config-standard": "^18.1.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.2.2"
   },
   "scripts": {
-    "serve": "cd _site && python -m SimpleHTTPServer 4000",
-    "build:css": "node-sass --output-style compressed style.scss _site/style.css",
-    "build:js": "node generate.js",
-    "build": "npm run build:css && npm run build:js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/spacexlaunches/spacexlaunches.com.git"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "deploy": "s3_website push",
+    "lint:css": "stylelint './src/**/*.js'"
   }
 }
