--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
   "name": "spacexlaunches.com",
   "description": "Previous SpaceX launches and next mission",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/louisjc/spacexlaunches.com.git"
+  },
   "dependencies": {
     "axios": "^0.18.0",
-    "boostrap": "^2.0.0",
-    "bootstrap": "^4.0.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-ga": "^2.4.1",
-    "react-scripts": "1.1.1",
-    "styled-components": "^3.1.6"
+    "bootstrap": "^4.1.3",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-ga": "^2.5.3",
+    "react-scripts": "2.0.1",
+    "styled-components": "^3.4.9"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.2",
-    "eslint": "^4.18.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-flowtype": "^2.46.0",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
-    "stylelint": "^9.1.1",
-    "stylelint-config-standard": "^18.1.0",
+    "babel-eslint": "^9.0.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "stylelint": "^9.6.0",
+    "stylelint-config-standard": "^18.2.0",
     "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.2.2"
+    "stylelint-processor-styled-components": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,5 +34,11 @@
     "eject": "react-scripts eject",
     "deploy": "s3_website push",
     "lint:css": "stylelint './src/**/*.js'"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
