--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "bootstrap": "^4.2.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3",
+    "react-scripts": "2.1.8",
+    "react-sizeme": "^2.5.2",
+    "react-tiny-virtual-list": "^2.2.0",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {},
@@ -20,7 +22,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy": "s3_website push",
     "lint:css": "stylelint './src/**/*.js'"
   },
   "browserslist": [
