--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
     "react-tiny-virtual-list": "^2.2.0",
     "styled-components": "^4.1.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.11.0",
+    "@types/react": "^16.8.7",
+    "@types/react-dom": "^16.8.2",
+    "@types/styled-components": "^4.1.12",
+    "typescript": "^3.3.3333"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
