--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,29 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
+    "experimentalDecorators": true,
+    "lib": ["dom", "dom.iterable", "esnext"],
     "moduleResolution": "node",
-    "resolveJsonModule": true,
+    "target": "es5",
+    "module": "esnext",
+    "esModuleInterop": true,
     "isolatedModules": true,
+    "resolveJsonModule": true,
+    "allowJs": false,
+    // "checkJs": true,
     "noEmit": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
     "jsx": "preserve"
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
