--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "url": "git+https://github.com/louisjc/spacexlaunches.com.git"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-brands-svg-icons": "^5.7.2",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
     "react": "^16.7.0",
